// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saves numberOfItems to state and outputs it 1`] = `
<div
  className="CalculatorForm"
>
  <h2>
    Purchase Form
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        Number of items:
        <input
          name="numberOfItems"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
    </div>
    <div>
      <label>
        Price per item:
        <input
          name="pricePerItem"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
    </div>
    <input
      type="submit"
      value="Submit"
    />
  </form>
  <h3>
    Results:
  </h3>
  <p>
    Number of items: 
    <br />
    Price per item: $
  </p>
</div>
`;

exports[`saves numberOfItems to state and outputs it 2`] = `
<div
  className="CalculatorForm"
>
  <h2>
    Purchase Form
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label>
        Number of items:
        <input
          name="numberOfItems"
          onChange={[Function]}
          type="text"
          value="100"
        />
      </label>
    </div>
    <div>
      <label>
        Price per item:
        <input
          name="pricePerItem"
          onChange={[Function]}
          type="text"
          value="200"
        />
      </label>
    </div>
    <input
      type="submit"
      value="Submit"
    />
  </form>
  <h3>
    Results:
  </h3>
  <p>
    Number of items: 
    100
    <br />
    Price per item: $
    200
  </p>
</div>
`;
